# templates

./: .editorconfig  .gitignore  README.md  bleur.toml  flake.nix  shell.nix  templates.nix  templates.toml
.github/: CODEOWNERS
.github/workflows/: test.yml  update.yml
c-gtk/: CMakeLists.txt  README.md  default.nix  justfile  shell.nix
c-gtk/cmake/: data.cmake  gresources.cmake  gtk.cmake
c-gtk/data/: desktop.in.in  gschema.xml.in  metainfo.xml.in.in
c-gtk/data/resources/: resources.gresource.xml
c-gtk/include/: app.h
c-gtk/src/: app.c  main.c
flutter/: README.md  flake.nix  pubspec.yaml  shell.nix  treefmt.toml
flutter/linux/runner/: my_application.cc
python/: .gitignore  .pre-commit-config.yaml  Makefile  bleur.toml  flake.nix  pyproject.toml  shell.nix
python/.github/workflows/: ci.yaml
python/.zed/: debug.json
python/docs/source/: conf.py  index.rst  main.rst  other.rst
python/src/: _logging.py  main.py  settings.py
python/tests/: test_hello.py
rust/: .gitignore  Cargo.toml  bleur.toml  default.nix  flake.nix  from.txt  readme.md
rust-actix/: .gitignore  Cargo.toml  bleur.toml  default.nix  flake.nix  module.nix  readme.md  shell.nix
rust-actix-docker/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  bleur.toml  docker-compose.dev.yml  docker-compose.yml  justfile  readme.md
rust-actix-docker/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
rust-actix-smol/: Cargo.toml
rust-actix-smol/crates/cli/src/: main.rs
rust-actix/.github/scripts/: db-selection.sh
rust-actix/crates/cli/: Cargo.toml
rust-actix/crates/cli/src/: config.rs  error.rs  lib.rs  main.rs
rust-actix/crates/database/: Cargo.toml
rust-actix/crates/database/src/: lib.rs  main.rs
rust-actix/crates/http/: Cargo.toml
rust-actix/crates/http/src/: lib.rs
rust-actix/crates/http/src/routes/: mod.rs
rust-actix/crates/templates/: Cargo.toml
rust-book/: .gitignore  README.md  book.toml  default.nix  flake.nix  shell.nix  taplo.toml
rust-book/.github/workflows/: deploy.yml
rust-book/src/: SUMMARY.md  muqaddima.md
rust-gtk/.github/workflows/: test.yml
rust-nightly/: Cargo.toml  LICENSE  bleur.toml  default.nix  flake.nix  readme.md  rust-toolchain.toml  shell.nix
rust-nightly/src/: main.rs
rust-relm4/: Cargo.toml  default.nix  flake.nix
rust-relm4-minimal/: Cargo.toml  shell.nix
rust-shared/: .gitignore  Cargo.toml  bleur.toml  default.nix  flake.nix  justfile  readme.md  shell.nix  templib.h
rust-shared/.github/workflows/: test.yml
rust-shared/src/: lib.rs
rust-shared/tests/: try.c
rust-telegram/: bleur.toml  default.nix  readme.md  shell.nix
rust-telegram/src/: main.rs
ts-react/: .editorconfig  README.md  bleur.toml  package.json
ts-vue/: .editorconfig  README.md  bleur.toml  eslint.config.js  flake.nix  index.html  package.json  shell.nix  treefmt.toml
