###
# META
###
[project]

name = "@name@"
version = "@version@"
description = "@description@"
readme = "readme.md"
requires-python = ">=3.13.3"
authors = ["@author@"]
urls = ["@website@", "@repository@"]

###
# DEPS
###
dependencies = ["pydantic-settings>=2.12.0", "structlog>=25.5.0"]

[dependency-groups]
dev = [
  "commitizen>=4.12.1",    # for conventional commits, use cz commit
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
]
docs = [
  "esbonio>=1.0.0",
  "sphinx>=9.1.0",
  "sphinx-book-theme>=1.1.4",
  "sphinx-copybutton>=0.5.2",
]

###
# RUFF
###
[tool.ruff]
line-length = 85
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "T201",   # print(...)
  "D",      # docstring related, enable if you want
  "S101",   # assert
  "COM812", # missing trailing comma
]
unfixable = []
fixable = ["ALL"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"


###
# Testing
###
[tool.coverage.run]
omit = ["src/__main__.py", "src/_logging.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto" # no need for pytest.mark.asyncio
testpaths = ["tests"]
