[workspace]
resolver = "2"
members = ["crates/cli", "crates/database", "crates/http", "crates/templates"]

[workspace.package]
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]
edition = "2021"
version = "0.1.0"
license = "MIT"
description = "Just a Rust template via nix flakes"
homepage = "https://github.com/xinux-org/templates"
repository = "https://github.com/xinux-org/templates"

# Shared dependencies across crates
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4"

# Optimize release binary as much as possible
[profile.release]
codegen-units = 1
incremental = true
lto = true
strip = true
opt-level = "z"
