[package]
name = "template-nightly"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/xinux-org/templates"
repository = "https://github.com/xinux-org/templates"
description = "Just a nightly Rust template via nix flakes"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]

# Dependencies that will included with final binary
[dependencies]

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
