[package]
name = "#name#"
version = "#version#"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "#website#"
repository = "#repository#"
description = "#description#"
authors = ["#author#"]

[lib]
name = "templib"
crate-type = ["rlib", "cdylib"]

# Dependencies that will included with final binary
[dependencies]
libc = "0.2"

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
