[package]
name = "#name#"
version = "#version#"
edition = "2021"
license = "MIT"
homepage = "#website#"
repository = "#repository#"
description = "#description#"
authors = ["#author#"]

[lib]
name = "#name#lib"
crate-type = ["rlib", "cdylib"]

# Dependencies that will included with final binary
[dependencies]
libc = "0.2"

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
