[package]
name = "#name#"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://#website#"
repository = "https://#repo#"
description = "#description#"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]

# Dependencies that will included with final binary
[dependencies]

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
